lib_LIBRARIES=libcircle_buff.a
include_HEADERS = include/circle_buff.h
libcircle_buff_a_INCLUDES = circle_buff.h
libcircle_buff_a_SOURCES = src/circle_buff.c
libcircle_buff_a_CPPFLAGS = -Iinclude -I$(top_builddir)/list/include/ -I$(top_builddir)/tools_util/include/
#libtools_a_LIBADD = -L$(top_builddir)/tools_util -ltools
